# ledmatrix

./: .gitignore  AGENTS.md  BUILD_REPORT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  led-control.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md  IMPLEMENTATION_NOTES.md  PRD_SOURCE.md  PYPI_GUIDE.md
examples/: _bootstrap.py  draw_primitives.py  grayscale_wave.py  hardware_smoketest.py  mock_demo.py  snake_game.py  text_marquee.py
src/ledmatrix/: __init__.py  async_device.py  canvas.py  device.py  dither.py  exceptions.py  geometry.py  hotplug.py  image.py  logging.py  scheduler.py  shapes.py
src/ledmatrix/cli/: main.py
src/ledmatrix/data/: 50-framework-inputmodule.rules  __init__.py
src/ledmatrix/font/: __init__.py  bdf.py  font.py
src/ledmatrix/font/data/: 3x5.bdf  5x7.bdf  __init__.py  tom-thumb.bdf
src/ledmatrix/protocol/: __init__.py  framework16.py  types.py
src/ledmatrix/transport/: __init__.py  base.py  mock.py  serial.py
tests/: test_canvas.py  test_cli.py  test_device.py  test_dither.py  test_font.py  test_protocol.py  test_scheduler.py
