[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledmatrix"
version = "0.1.0"
description = "A cross-platform Python SDK for the Framework 16 LED Matrix Input Module"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "ledmatrix contributors"}]
keywords = ["framework", "framework16", "led", "matrix", "serial", "hardware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Hardware",
]
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
image = ["Pillow>=9.0"]
array = ["numpy>=1.21"]
dev = ["build>=1.2", "pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.6", "mypy>=1.10"]
all = ["Pillow>=9.0", "numpy>=1.21"]

[project.scripts]
ledmatrix = "ledmatrix.cli.main:main"

[project.urls]
Homepage = "https://github.com/jeffthepineapple/ledmatrix"
Documentation = "https://github.com/jeffthepineapple/ledmatrix#readme"
Issues = "https://github.com/jeffthepineapple/ledmatrix/issues"
Repository = "https://github.com/jeffthepineapple/ledmatrix"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ledmatrix = ["font/data/*.bdf", "data/*.rules"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
